<?xml version="1.0" encoding="utf-8"?>
<resources>
    
	<!-- Generic -->
    <string name="app_name">CrashPad</string>
    
    <!-- GPS & Other
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="contact_renter">Contact Proprietor</string>
    <string name="paypal_url">https://www.paypal.com/home</string>
     -->
     
    <!-- Login -->
    <string name="image_description">the logo</string>
    <string name="login_button">Login</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="create_account_button">Create New Account</string>
    <string name="remember_checkBox">Remember Password</string>
    
    <!-- Create Account -->
    <string name="new_username_hint">Create Username</string>
    <string name="new_password_hint">Create Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="new_email_hint">john@email.com</string>
    <string name="account_creation">Account Creation</string>
    <string name="account_create_button">Create Account</string>
    <string name="password_toast">Passwords do not match.</string>
    <string name="email_toast">Not a valid email address.</string>
    <string name="creation_error_toast">Fields cannot be empty.</string>
    <!-- Extended Version
    <string name="new_account_name_suggestion">John Doe</string>
    <string name="new_account_phone_number_suggestion">(555)123&#8211;4567</string>
    <string name="new_account_information">Account Information</string>
    <string name="account_creation_confirmation_toast">Account Created!</string>
    -->
    
    <!-- Home -->
    <string name="renting_label">Renting</string>
    <string name="leasing_label">Leasing</string>
    <string name="find_prop_button">Find Properties</string>
    <string name="check_bookings_button">Check Bookings</string>
    <string name="review_prop_button">Review Properties</string>
    <string name="edit_account_button">Edit Account</string>
     
    <!-- Edit Account -->
    <string name="edit_account_info">Edit Account Info</string>
    <string name="view_account_info">View Account Info</string>
    <string name="edit_password_hint">Change Password</string>
    <string name="update_info_button">Update Info</string>
    <!-- <string name="edit_email_hint">john@email.com</string> -->
    
    <!-- Review Own Property -->
    <string name="edit_prop_button">Edit Property</string>

    <!-- Edit Property -->
    <string name="edit_prop_info">Edit Property Info</string>
    <string name="view_prop_info">View Property Info</string>
    <string name="edit_address_hint">Edit Address</string>
    <string name="edit_description_hint">Edit Description</string>
    <string name="edit_code_hint">Edit Access Code</string>
    
    <!-- Create Property -->
    <string name="new_name_hint">Enter Property Name</string>
    <string name="new_address_hint">Enter Address</string>
    <string name="new_description_hint">Enter Description</string>
    <string name="prop_create">Add Property</string>
    <string name="prop_create_button">Add Property</string>
    
    <!-- Review Booked Property -->
    <string name="dates_rented_label">Dates Rented:</string>
    <string name="access_code_label">Access Code:</string>
    
    <!-- Parameters -->
    <string name="search_properties">Search Properties</string>
    <string name="prompt_location">Location to search:</string>
    <string name="location">My Location</string>
    <string name="prompt_distance">Distance (in miles) to search for property rentals:</string>
    <string name="distance">10</string>
    <string name="search_button">Search</string>
         
    <!-- Find Property -->
    <string name="rent_prop_button">Rent this Property</string>
    <string name="prompt_check_in">Check in:</string>
    <string name="prompt_check_out">Check out:</string>
    
    <!-- Edit Property
    <string name="name_activity_property">PropertyActivity</string>
    <string name="properties">Properties</string>
    <string name="property_name_hint">Enter a name for the property</string>
    <string name="property_name_label">Title</string>
    <string name="property_details_label">Details</string>
    -->
    
    <!-- Help -->
    <string name="help_box_text">Help.</string>
    <!-- 
    The above string should explain its purpose as "Help"
    It should divide into sections for each of the four parts of the App
    It should explain what to do if WiFi problems
    It should explain that Android's GPS has bugs with the latest version
    	and may require rebooting to fix.
    etc.
     -->
    
</resources>
