<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#99ccff" >

    <TextView
        android:id="@+id/account_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_creation"
        android:textSize="@dimen/title_text_size" />

    <EditText
        android:id="@+id/new_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_username_hint"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/new_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_email_hint"
        android:inputType="textEmailAddress"
        android:ems="10" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:ems="10" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:ems="10" />

    <Button
        android:id="@+id/account_create_button"
        android:layout_width="@dimen/btn_size"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/account_create_button"
        style="@style/livid_brown_btn" />

</LinearLayout>
