<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/property_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:listSeparatorTextViewStyle" />

    <TextView android:id="@+id/property_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        
    <TextView android:id="@+id/property_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/prompt_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_check_in" />

            <Button
                android:id="@+id/start_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/prompt_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_check_out" />

            <Button
                android:id="@+id/end_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />
        </LinearLayout>

    </LinearLayout>
    
    <Button android:id="@+id/rent_property_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" 
        android:text="@string/rent_prop_button" />

</LinearLayout>